refactor: rename team > people

--- a/source/people/index.ejs
+++ b/source/people/index.ejs
@@ -1,5 +1,5 @@
 ---
-title: Team
+title: People
 date: 2015-11-17 01:00:51
 layout: page
 ---
@@ -21,27 +21,27 @@ layout: page
       'Suwon Seong': 'University of Seoul ECE, Summer 2017',
       'Taehyoung Lim': 'POSTECH EE, Spring 2017',
       'Suan Lee': 'POSTECH EE, Spring 2017)',
-      'Jihoon Park': 'Pusan National University OME, Winter 2016)',
-      'Junseo Joe': 'POSTECH EE, Winter 2016–Spring 2017)',
-      'Younghoon Byun': 'POSTECH EE, Winter 2016)',
-      'Sejin Kim': 'Chonnam National University ECE, Fall 2016)',
-      'Jinpyo Jeong': 'POSTECH EE, Fall–Winter 2016)',
-      'Tae Gyun Lee': 'Korea University EE, Summer 2016)',
-      'Woojo Kim': 'Kyung Hee University ERE, Spring 2016)',
-      'Young-Uk Shin': 'Kyungpook National University EE, Summer 2016)',
-      'Seongmin Park': 'POSTECH EE, Winter 2015–Spring 2016)',
-      'Hyounglae Kim': 'POSTECH EE, Winter 2015)',
-      'Sukjun Kang': 'POSTECH EE, Winter 2015)',
-      'Won Kyung Jung': 'POSTECH EE, Winter 2015)',
-      'Insung Ahn': 'POSTECH EE, Winter 2015)',
-      'Inyeol Yun': 'POSTECH EE, Summer–Fall 2015)',
-      'Seunglok Song': 'POSTECH EE, Summer 2015)',
-      'Jeong Woo Park': 'Kyung Hee University ERE, Summer 2015)',
-      'Hyuk Park': 'POSTECH EE, Summer–Fall 2015)',
-      'Miram Kwon': 'Soongsil University EE, Summer 2015)',
-      'Subon Kim': 'Hanyang University MSE, Summer 2015)',
-      'Dong Hyup Kim': 'Hanyang University EE, Summer 2015)',
-      'Jiho Choi': 'Hanyang University EE, Summer 2015)'
+      'Jihoon Park': 'Pusan National University OME, Winter 2016',
+      'Junseo Joe': 'POSTECH EE, Winter 2016–Spring 2017',
+      'Younghoon Byun': 'POSTECH EE, Winter 2016',
+      'Sejin Kim': 'Chonnam National University ECE, Fall 2016',
+      'Jinpyo Jeong': 'POSTECH EE, Fall–Winter 2016',
+      'Tae Gyun Lee': 'Korea University EE, Summer 2016',
+      'Woojo Kim': 'Kyung Hee University ERE, Spring 2016',
+      'Young-Uk Shin': 'Kyungpook National University EE, Summer 2016',
+      'Seongmin Park': 'POSTECH EE, Winter 2015–Spring 2016',
+      'Hyounglae Kim': 'POSTECH EE, Winter 2015',
+      'Sukjun Kang': 'POSTECH EE, Winter 2015',
+      'Won Kyung Jung': 'POSTECH EE, Winter 2015',
+      'Insung Ahn': 'POSTECH EE, Winter 2015',
+      'Inyeol Yun': 'POSTECH EE, Summer–Fall 2015',
+      'Seunglok Song': 'POSTECH EE, Summer 2015',
+      'Jeong Woo Park': 'Kyung Hee University ERE, Summer 2015',
+      'Hyuk Park': 'POSTECH EE, Summer–Fall 2015',
+      'Miram Kwon': 'Soongsil University EE, Summer 2015',
+      'Subon Kim': 'Hanyang University MSE, Summer 2015',
+      'Dong Hyup Kim': 'Hanyang University EE, Summer 2015',
+      'Jiho Choi': 'Hanyang University EE, Summer 2015'
     };
 %>
 <!-- BEGIN SIDEBAR & CONTENT -->
@@ -111,6 +111,7 @@ layout: page
 		<li><a class="twitter" data-original-title="Twitter" href="javascript:;"></a></li>
 		<li><a class="googleplus" data-original-title="Goole Plus" href="javascript:;"></a></li>
 		<li><a class="linkedin" data-original-title="Linkedin" href="javascript:;"></a></li>
+		<li><a class="email" data-original-title="Linkedin" href="mailto:ychung@postech.ac.kr"></a></li>
 	      </ul>
 	    </div>
 	  </li>
@@ -150,6 +151,7 @@ layout: page
 		<li><a class="twitter" data-original-title="Twitter" href="javascript:;"></a></li>
 		<li><a class="googleplus" data-original-title="Goole Plus" href="javascript:;"></a></li>
 		<li><a class="linkedin" data-original-title="Linkedin" href="javascript:;"></a></li>
+		<li><a class="email" data-original-title="Linkedin" href="mailto:jpjeung@postech.ac.kr"></a></li>
 	      </ul>
 	    </div>
 	  </li>
@@ -170,6 +172,7 @@ layout: page
 		<li><a class="twitter" data-original-title="Twitter" href="javascript:;"></a></li>
 		<li><a class="googleplus" data-original-title="Goole Plus" href="javascript:;"></a></li>
 		<li><a class="linkedin" data-original-title="Linkedin" href="javascript:;"></a></li>
+		<li><a class="email" data-original-title="Linkedin" href="mailto:psm918@postech.ac.kr"></a></li>
 	      </ul>
 	    </div>
 	  </li>
@@ -190,6 +193,7 @@ layout: page
 		<li><a class="twitter" data-original-title="Twitter" href="javascript:;"></a></li>
 		<li><a class="googleplus" data-original-title="Goole Plus" href="javascript:;"></a></li>
 		<li><a class="linkedin" data-original-title="Linkedin" href="javascript:;"></a></li>
+		<li><a class="email" data-original-title="Linkedin" href="mailto:inyul1225@postech.ac.kr"></a></li>
 	      </ul>
 	    </div>
 	  </li>
@@ -208,7 +212,8 @@ layout: page
 		<li><a class="facebook" data-original-title="Facebook" href="javascript:;"></a></li>
 		<li><a class="twitter" data-original-title="Twitter" href="javascript:;"></a></li>
 		<li><a class="googleplus" data-original-title="Goole Plus" href="javascript:;"></a></li>
-		<li><a class="linkedin" data-original-title="Linkedin" href="javascript:;"></a></li>
+        <li><a class="linkedin" data-original-title="Linkedin" href="javascript:;"></a></li>
+		<li><a class="email" data-original-title="Linkedin" href="mailto:sksqkrgur@postech.ac.kr"></a></li>
 	      </ul>
 	    </div>
 	  </li>
@@ -229,6 +234,7 @@ layout: page
 		<li><a class="twitter" data-original-title="Twitter" href="javascript:;"></a></li>
 		<li><a class="googleplus" data-original-title="Goole Plus" href="javascript:;"></a></li>
 		<li><a class="linkedin" data-original-title="Linkedin" href="javascript:;"></a></li>
+		<li><a class="email" data-original-title="Linkedin" href="mailto:challenge@postech.ac.kr"></a></li>
 	      </ul>
 	    </div>
 	  </li>
@@ -249,6 +255,8 @@ layout: page
 		<li><a class="twitter" data-original-title="Twitter" href="javascript:;"></a></li>
 		<li><a class="googleplus" data-original-title="Goole Plus" href="javascript:;"></a></li>
 		<li><a class="linkedin" data-original-title="Linkedin" href="javascript:;"></a></li>
+		<li><a class="email" data-original-title="Linkedin" href="mailto:ksw1118@postech.ac.kr"></a></li>
+
 	      </ul>
 	    </div>
 	  </li>
