feat(source/index.ejs): 메인 배너에 jssor slider 이용하여 배너 여러장 slide 적용

--- a/source/index.ejs
+++ b/source/index.ejs
@@ -15,9 +15,26 @@ layout: index
       { url: 'https://www.ansys.com', img: '/assets/images/sponsors/ansys.jpg' }
     ];
 %>
-<div class="container-fluid flush-with-header">
-  <div class="row margin-bottom-40 row-corporate" style="background-image: url(assets/images/banners/banner-3.jpg); height: 400px;">
+  <div id="jssor_1" class="margin-bottom-40 flush-with-header" style="position:relative;top:0px;left:0px;width:1268px;height:400px;overflow:hidden;">
+    <div data-u="slides" style="position:absolute;top:0px;left:0px;width:1268px;height:400px;overflow:hidden;">
+      <div><img data-u="image" src="/assets/images/banners/banner-1.jpg" width=1268px height=400px /></div>
+      <div><img data-u="image" src="/assets/images/banners/banner-3.jpg" /></div>
+    </div>
+    <!-- Bullet Navigator -->
+    <div data-u="navigator" class="jssorb052" style="position:absolute;bottom:12px;right:12px;" data-autocenter="1" data-scale="0.5" data-scale-bottom="0.75">
+      <div data-u="prototype" class="i" style="width:16px;height:16px;">
+        <svg viewbox="0 0 16000 16000" style="position:absolute;top:0;left:0;width:100%;height:100%;">
+          <circle class="b" cx="8000" cy="8000" r="5800"></circle>
+        </svg>
+      </div>
+    </div>
   </div>
+<div class="container-fluid">
+  <div class="w3-content w3-display-container">
+  <!--
+  <div class="row margin-bottom-40 row-corporate" style="background-image: url(asset3s/images/banners/banner-3.jpg); height: 400px;">
+  </div>
+  -->
 </div>
 <!--
 <div class="container">
@@ -135,6 +152,23 @@ layout: index
 <div class="container-fluid">
 <div class="row margin-bottom-40 row-corporate bg-light-2" style="height: 400px;">
   <div class="container">
+    <div class="col-md-6 row-corporate-text-container" style="height: 400px;">
+    <div class="row-corporate-text">
+      <h1><b class="wow fadeIn require">Word Cloud</b></h1>
+      <h4 class="wow fadeIn">Representative keywords from our publications
+        (by Word Cloud Generator)</h4>
+    </div>
+    </div>
+    <div class="col-md-6 wow fadeIn">
+      <img src="/assets/images/wordcloud.jpg" style="width: 80%; height: 300px; margin: 0 10px">
+    </div>
+  </div>
+</div>
+</div>
+<!--
+<div class="container-fluid">
+<div class="row margin-bottom-40 row-corporate bg-light-2" style="height: 400px;">
+  <div class="container">
     <div class="col-xs-4 col-xs-pull-4 col-sm-pull-0 col-sm-6 wow fadeIn">
       <img src="/assets/images/wordcloud.jpg" style="width: 80%; height: 300px; margin-top:50px">
     </div>
@@ -148,7 +182,7 @@ layout: index
   </div>
 </div>
 </div>
-
+-->
     <!-- BEGIN TABS AND TESTIMONIALS -->
     <div class="row mix-block margin-bottom-40">
       <!-- TABS -->
@@ -439,4 +473,3 @@ layout: index
     <!-- END SPONSORS -->
   </div>
 </div>
-
