--- a/source/index.ejs
+++ b/source/index.ejs
@@ -29,75 +29,16 @@ layout: index
       </div>
     </div>
   </div>
+  <!--
 <div class="container-fluid">
   <div class="w3-content w3-display-container">
-  <!--
   <div class="row margin-bottom-40 row-corporate" style="background-image: url(asset3s/images/banners/banner-3.jpg); height: 400px;">
   </div>
-  -->
 </div>
-<!--
-<div class="container">
-    <div class="row service-box margin-bottom-40">
-      <div class="col-md-4 col-sm-4">
-	<div class="service-box-heading">
-	  <em><i class="fa fa-location-arrow blue wow rollIn"></i></em>
-	  <span>Multipurpose Template</span>
-	</div>
-	<p>Lorem ipsum dolor sit amet, dolore eiusmod quis tempor incididunt ut et dolore Ut veniam unde nostrudlaboris. Sed unde omnis iste natus error sit voluptatem.</p>
-	  <img class="img-responsive"
-	  src="/asset1.png">
-      </div>
-      <div class="col-md-4 col-sm-4">
-	<div class="service-box-heading">
-	  <em><i class="fa fa-check red wow rollIn"></i></em>
-	  <span>Well Documented</span>
-	</div>
-	<p>Lorem ipsum dolor sit amet, dolore eiusmod quis tempor incididunt ut et dolore Ut veniam unde nostrudlaboris. Sed unde omnis iste natus error sit voluptatem.</p>
-	  <img class="img-responsive"
-	  src="/asset3.jpg">
-      </div>
-      <div class="col-md-4 col-sm-4">
-	<div class="service-box-heading">
-	  <em><i class="fa fa-compress green wow rollIn"></i></em>
-	  <span>Responsive Design</span>
-	</div>
-	<p>Lorem ipsum dolor sit amet, dolore eiusmod quis tempor incididunt ut et dolore Ut veniam unde nostrudlaboris. Sed unde omnis iste natus error sit voluptatem.</p>
-	  <img class="img-responsive"
-	  src="/asset1.jpg">
-      </div>
-    </div>
-  </div>
-  -->
+-->
 
 <div class="main">
   <div class="container">
-    <!-- BEGIN STEPS -->
-    <!--
-    <div class="row margin-bottom-40 front-steps-wrapper front-steps-count-3 wow
-    fadeIn">
-      <div class="col-md-4 col-sm-4 front-step-col">
-	<div class="front-step front-step1">
-	  <h2>Goal definition</h2>
-	  <p>Lorem ipsum dolor sit amet sit consectetur adipisicing eiusmod tempor.</p>
-	</div>
-      </div>
-      <div class="col-md-4 col-sm-4 front-step-col">
-	<div class="front-step front-step2">
-	  <h2>Analyse</h2>
-	  <p>Lorem ipsum dolor sit amet sit consectetur adipisicing eiusmod tempor.</p>
-	</div>
-      </div>
-      <div class="col-md-4 col-sm-4 front-step-col">
-	<div class="front-step front-step3">
-	  <h2>Implementation</h2>
-	  <p>Lorem ipsum dolor sit amet sit consectetur adipisicing eiusmod tempor.</p>
-	</div>
-      </div>
-    </div>
-    -->
-    <!-- END STEPS -->
-
     <!-- BEGIN RESEARCH AREA -->
     <div class="row recent-work margin-bottom-40">
       <div class="col-md-3">
@@ -150,17 +91,17 @@ layout: index
     <!-- END RESEARCH AREA -->
 
 <div class="container-fluid">
-<div class="row margin-bottom-40 row-corporate bg-light-2" style="height: 400px;">
+<div class="row margin-bottom-40 bg-light-2" style="min-height: 200px;">
   <div class="container">
-    <div class="col-md-6 row-corporate-text-container" style="height: 400px;">
+    <div class="col-md-5 row-corporate-text-container" style="height: 200px;">
     <div class="row-corporate-text">
       <h1><b class="wow fadeIn require">Word Cloud</b></h1>
       <h4 class="wow fadeIn">Representative keywords from our publications
         (by Word Cloud Generator)</h4>
     </div>
     </div>
-    <div class="col-md-6 wow fadeIn">
-      <img src="/assets/images/wordcloud.jpg" style="width: 80%; height: 300px; margin: 0 10px">
+    <div class="col-md-7 wow fadeIn">
+      <img src="/assets/images/wordcloud.jpg" style="width: 80%; min-width: 330px; height: 300px;">
     </div>
   </div>
 </div>
