--- a/themes/chunglab/source/css/theme-styles.styl
+++ b/themes/chunglab/source/css/theme-styles.styl
@@ -184,6 +184,14 @@ h4 {
   object-fit: cover;
 }
 
+.mix-grid .mix.col-xs-12 img {
+  margin: 0 auto;
+  max-width: 100%;
+  max-height: 400px;
+  width: auto;
+  height: auto;
+}
+
 .btn-primary {
   color: white !important;
   border: 1px solid #e94d1c !important;
