fix: jssor_1_slider_init()가 모든 페이지에서 호출 되는 버그

--- a/themes/chunglab/layout/_partial/scripts.ejs
+++ b/themes/chunglab/layout/_partial/scripts.ejs
@@ -126,5 +126,7 @@ jssor_1_slider_init = function() {
 <%- partial('disqus') %>
 <%- partial('google-analytics') %>
 
-<script type="text/javascript">jssor_1_slider_init();</script>
+<% if (page.layout == "index"){ %>
+  <script type="text/javascript">jssor_1_slider_init();</script>
+<% } %>
 <!-- END INTEGRATIONS -->
