--- a/themes/chunglab/layout/_partial/footer.ejs
+++ b/themes/chunglab/layout/_partial/footer.ejs
@@ -3,7 +3,7 @@
       <div class="container">
         <div class="row">
           <!-- BEGIN COPYRIGHT -->
-          <div class="col-md-6 col-sm-6 padding-top-10">
+          <div class="col-md-6 col-sm-6">
             &copy; <%= date(new Date(), 'YYYY') %> <%= config.title %><br>
             POSTECH
           </div>
