--- a/themes/chunglab/layout/_partial/scripts.ejs
+++ b/themes/chunglab/layout/_partial/scripts.ejs
@@ -84,7 +84,7 @@ jssor_1_slider_init = function() {
 
 
 <% if (page.layout == "contact"){ %>
-  <%- js('http://maps.google.com/maps/api/js?sensor=true') %> 
+  <%- js('http://maps.google.com/maps/api/js?key=' + theme.google_api_key) %> 
   <%- js('metronic/assets/plugins/gmaps/gmaps.js') %>
   <script>
     var map;
