fix(index.ejs): 메인 배너 왼쪽으로 치우치는 버그

--- a/source/index.ejs
+++ b/source/index.ejs
@@ -15,7 +15,7 @@ layout: index
       { url: 'https://www.ansys.com', img: '/assets/images/sponsors/ansys.jpg' }
     ];
 %>
-  <div id="jssor_1" class="margin-bottom-40 flush-with-header" style="position:relative;top:0px;left:0px;width:1268px;height:400px;overflow:hidden;">
+  <div id="jssor_1" class="margin-bottom-40 flush-with-header" style="position:relative;top:0px;left:0px;width:1268px;height:400px;overflow:hidden;margin-left:auto;margin-right:auto;">
     <div data-u="slides" style="position:absolute;top:0px;left:0px;width:1268px;height:400px;overflow:hidden;">
       <div><img data-u="image" src="/assets/images/banners/banner-1.jpg" width=1268px height=400px /></div>
       <div><img data-u="image" src="/assets/images/banners/banner-3.jpg" /></div>
