category page에도 categories, tags 표시

--- a/themes/chunglab/layout/category.ejs
+++ b/themes/chunglab/layout/category.ejs
@@ -6,6 +6,6 @@
   </ul>
 <section id="main">
  <h1><%- page.category %></h1>
- <%- partial('_partial/archive', {pagination: config.category, index: true}) %>
+ <%- partial('_partial/archive', {pagination: config.category, index: false}) %>
 </section>
 </div>
