Achievements 메뉴에서 tags 선택시, Home > Blog > Tagged:... 를 Home > Achievements > ... 로 수정

--- a/themes/chunglab/layout/tag.ejs
+++ b/themes/chunglab/layout/tag.ejs
@@ -1,11 +1,11 @@
 <div class="container">
   <ul class="breadcrumb">
     <li><a href="/">Home</a></li>
-    <li><a href="/blog">Blog</a></li>
-    <li class="active">Tagged: <%- page.tag %></li>
+    <li><a href="/blog">Archievements</a></li>
+    <li class="active"><%- page.tag %></li>
   </ul>
 <section id="main">
-  <h1>Tagged: <%- page.tag %></h1>
+  <h1><%- page.tag %></h1>
   <%- partial('_partial/archive', {pagination: config.tag, index: true}) %>
 </section>
 </div>
