tag page에도 categories, tags 표시

--- a/themes/chunglab/layout/tag.ejs
+++ b/themes/chunglab/layout/tag.ejs
@@ -6,7 +6,7 @@
   </ul>
 <section id="main">
   <h1><%- page.tag %></h1>
-  <%- partial('_partial/archive', {pagination: config.tag, index: true}) %>
+  <%- partial('_partial/archive', {pagination: config.tag, index: false}) %>
 </section>
 </div>
 
