refactor(people): add people and photo data to _config.yml and apply them

--- a/source/people/index.ejs
+++ b/source/people/index.ejs
@@ -1,306 +1,5 @@
 ---
 title: People
-date: 2015-11-17 01:00:51
-layout: page
+date: 2018-10-30 01:00:51
+layout: people
 ---
-<%
-    const cur_interns = {
-      'Gilsu Jeon': 'POSTECH EE, Summer 2018',
-      'Hyung Min Ko': 'Kookmin University EE, Summer 2018',
-      'Gwon Kim': 'Korea University EE, Summer 2018',
-      'Jueun Kim': 'Handong University EE, Summer 2018',
-      'Yong Hun Song': 'Kyunghee University EE, Summer 2018',
-      'Ju Young Yun': 'Kyungpook National University EE, Summer 2018'
-    }
-    const prev_interns = {
-      'Dongyoon Lee': 'POSTECH EE, Winter 2017',
-      'Haeran Cho': 'Korea University EE, Winter 2017',
-      'Taewon Seo': 'POSTECH EE, Fall 2017',
-      'Jaeryung Han': 'Pusan National University OME, Winter 2017',
-      'Minji Park': 'POSTECH EE, Fall 2017',
-      'Suwon Seong': 'University of Seoul ECE, Summer 2017',
-      'Taehyoung Lim': 'POSTECH EE, Spring 2017',
-      'Suan Lee': 'POSTECH EE, Spring 2017)',
-      'Jihoon Park': 'Pusan National University OME, Winter 2016',
-      'Junseo Joe': 'POSTECH EE, Winter 2016–Spring 2017',
-      'Younghoon Byun': 'POSTECH EE, Winter 2016',
-      'Sejin Kim': 'Chonnam National University ECE, Fall 2016',
-      'Jinpyo Jeong': 'POSTECH EE, Fall–Winter 2016',
-      'Tae Gyun Lee': 'Korea University EE, Summer 2016',
-      'Woojo Kim': 'Kyung Hee University ERE, Spring 2016',
-      'Young-Uk Shin': 'Kyungpook National University EE, Summer 2016',
-      'Seongmin Park': 'POSTECH EE, Winter 2015–Spring 2016',
-      'Hyounglae Kim': 'POSTECH EE, Winter 2015',
-      'Sukjun Kang': 'POSTECH EE, Winter 2015',
-      'Won Kyung Jung': 'POSTECH EE, Winter 2015',
-      'Insung Ahn': 'POSTECH EE, Winter 2015',
-      'Inyeol Yun': 'POSTECH EE, Summer–Fall 2015',
-      'Seunglok Song': 'POSTECH EE, Summer 2015',
-      'Jeong Woo Park': 'Kyung Hee University ERE, Summer 2015',
-      'Hyuk Park': 'POSTECH EE, Summer–Fall 2015',
-      'Miram Kwon': 'Soongsil University EE, Summer 2015',
-      'Subon Kim': 'Hanyang University MSE, Summer 2015',
-      'Dong Hyup Kim': 'Hanyang University EE, Summer 2015',
-      'Jiho Choi': 'Hanyang University EE, Summer 2015'
-    };
-%>
-<!-- BEGIN SIDEBAR & CONTENT -->
-<div class="row margin-bottom-40">
-  <!-- BEGIN CONTENT -->
-  <div class="col-md-12 col-sm-12">
-    <div class="content-page">
-      <div class="row margin-bottom-30">
-	<!-- BEGIN INFO BLOCK -->               
-	<div class="col-md-6">
-	  <h2 class="no-top-space">Flexible Electronics Group</h2>
-      <p>Flexible Electronics Group at POSTECH</p>
-	  <!-- BEGIN LISTS -->
-	  <!-- END LISTS -->
-	</div>
-	<!-- END INFO BLOCK -->   
-
-	<!-- BEGIN CAROUSEL -->            
-	<div class="col-md-6 front-carousel">
-	  <div id="myCarousel" class="carousel slide">
-	    <!-- Carousel items -->
-	    <div class="carousel-inner">
-	      <div class="item active">
-                <img src='/assets/images/team/group/2017_summer.jpg'>
-		<div class="carousel-caption">
-		  <p>2017 Summer</p>
-		</div>
-	      </div>
-	      <div class="item">
-                <img src='/assets/images/team/group/2017_spring.jpg'>
-		<div class="carousel-caption">
-		  <p>2017 Spring</p>
-		</div>
-	      </div>
-	      <div class="item">
-                <img src='/assets/images/team/group/2016_spring.jpg'>
-		<div class="carousel-caption">
-		  <p>2016 Spring</p>
-		</div>
-	      </div>
-	    </div>
-	    <!-- Carousel nav -->
-	    <a class="carousel-control left" href="#myCarousel" data-slide="prev">
-	      <i class="fa fa-angle-left"></i>
-	    </a>
-	    <a class="carousel-control right" href="#myCarousel" data-slide="next">
-	      <i class="fa fa-angle-right"></i>
-	    </a>
-	  </div>                
-	</div>
-	<!-- END CAROUSEL -->
-      </div>
-
-      <div class="row front-team">
-	  <h3>PRINCIPAL INVESTIGATOR</h3>
-	<ul class="list-unstyled">
-	  <li class="col-md-3">
-	    <div class="thumbnail">
-              <img src='../metronic/assets/pages/img/people/img5-large.jpg'>
-	      <h3>
-		<strong>Yoonyoung Chung</strong> 
-		<small>Professor</small>
-	      </h3>
-          <p>Ph.D., Electrical Engineering, Stanford University (2012)</p>
-	      <ul class="social-icons social-icons-color">
-		<li><a class="facebook" data-original-title="Facebook" href="javascript:;"></a></li>
-		<li><a class="twitter" data-original-title="Twitter" href="javascript:;"></a></li>
-		<li><a class="googleplus" data-original-title="Goole Plus" href="javascript:;"></a></li>
-		<li><a class="linkedin" data-original-title="Linkedin" href="javascript:;"></a></li>
-		<li><a class="email" data-original-title="Linkedin" href="mailto:ychung@postech.ac.kr"></a></li>
-	      </ul>
-	    </div>
-	  </li>
-	</ul>            
-      </div>
-      <div class="row front-team">
-	  <h3>GRADUATE STUDENTS</h3>
-	<ul class="list-unstyled">
-	  <li class="col-md-3">
-	    <div class="thumbnail">
-          <img src=''>
-	      <h3>
-		<strong>Taewon Seo</strong> 
-		<small>Graduate students</small>
-	      </h3>
-	      <p>Research interest:
-            Undergraduate student at POSTECH EE (to be enrolled in our graduate program in Spring 2018)</p>
-	      <ul class="social-icons social-icons-color">
-		<li><a class="facebook" data-original-title="Facebook" href="javascript:;"></a></li>
-		<li><a class="twitter" data-original-title="Twitter" href="javascript:;"></a></li>
-		<li><a class="googleplus" data-original-title="Goole Plus" href="javascript:;"></a></li>
-		<li><a class="linkedin" data-original-title="Linkedin" href="javascript:;"></a></li>
-	      </ul>
-	    </div>
-	  </li>
-	  <li class="col-md-3">
-	    <div class="thumbnail">
-              <img src=''>
-	      <h3>
-		<strong>Jiinpyeo Jeung</strong> 
-		<small>Graduate students</small>
-	      </h3>
-	      <p>Undergraduate student at POSTECH EE (to be enrolled in our graduate program in Spring 2018)
-            LG Display, Intern (Summer 2016)</p>
-	      <ul class="social-icons social-icons-color">
-		<li><a class="facebook" data-original-title="Facebook" href="javascript:;"></a></li>
-		<li><a class="twitter" data-original-title="Twitter" href="javascript:;"></a></li>
-		<li><a class="googleplus" data-original-title="Goole Plus" href="javascript:;"></a></li>
-		<li><a class="linkedin" data-original-title="Linkedin" href="javascript:;"></a></li>
-		<li><a class="email" data-original-title="Linkedin" href="mailto:jpjeung@postech.ac.kr"></a></li>
-	      </ul>
-	    </div>
-	  </li>
-	  <li class="col-md-3">
-	    <div class="thumbnail">
-              <img src=''>
-	      <h3>
-		<strong>Seongmin Park</strong> 
-		<small>Graduate students</small>
-	      </h3>
-          <p>
-            Research interest: Flexible full-color electronic paper; novel 3-D flexible circuit<br>
-            B.S., Electrical Engineering, POSTECH (2016)<br>
-            LG Display, Intern (Summer 2016)<br>
-             SK Hynix, Intern (Winter 2014)</p>
-	      <ul class="social-icons social-icons-color">
-		<li><a class="facebook" data-original-title="Facebook" href="javascript:;"></a></li>
-		<li><a class="twitter" data-original-title="Twitter" href="javascript:;"></a></li>
-		<li><a class="googleplus" data-original-title="Goole Plus" href="javascript:;"></a></li>
-		<li><a class="linkedin" data-original-title="Linkedin" href="javascript:;"></a></li>
-		<li><a class="email" data-original-title="Linkedin" href="mailto:psm918@postech.ac.kr"></a></li>
-	      </ul>
-	    </div>
-	  </li>
-	  <li class="col-md-3">
-	    <div class="thumbnail">
-              <img src=''>
-	      <h3>
-		<strong>Inyeol Yun</strong> 
-		<small>Graduate students</small>
-	      </h3>
-          <p>
-            Research interest: Skin attachable sensors; electrical stimulation for healthcare applications<br>
-            B.S., Electrical Engineering, POSTECH (2016)<br>
-            SK Hynix, Intern (Winter 2014)
-          </p>
-	      <ul class="social-icons social-icons-color">
-		<li><a class="facebook" data-original-title="Facebook" href="javascript:;"></a></li>
-		<li><a class="twitter" data-original-title="Twitter" href="javascript:;"></a></li>
-		<li><a class="googleplus" data-original-title="Goole Plus" href="javascript:;"></a></li>
-		<li><a class="linkedin" data-original-title="Linkedin" href="javascript:;"></a></li>
-		<li><a class="email" data-original-title="Linkedin" href="mailto:inyul1225@postech.ac.kr"></a></li>
-	      </ul>
-	    </div>
-	  </li>
-	  <li class="col-md-3">
-	    <div class="thumbnail">
-              <img src=''>
-	      <h3>
-		<strong>Hyuk Park</strong> 
-		<small>Graduate students</small>
-	      </h3>
-          <p>
-            Research interest: Novel fabrication process for flexible thin-film transistor; flexible active lens for the next generation wireless technology<br>
-            B.S., Electrical Engineering, POSTECH (2016)
-          </p>
-	      <ul class="social-icons social-icons-color">
-		<li><a class="facebook" data-original-title="Facebook" href="javascript:;"></a></li>
-		<li><a class="twitter" data-original-title="Twitter" href="javascript:;"></a></li>
-		<li><a class="googleplus" data-original-title="Goole Plus" href="javascript:;"></a></li>
-        <li><a class="linkedin" data-original-title="Linkedin" href="javascript:;"></a></li>
-		<li><a class="email" data-original-title="Linkedin" href="mailto:sksqkrgur@postech.ac.kr"></a></li>
-	      </ul>
-	    </div>
-	  </li>
-	  <li class="col-md-3">
-	    <div class="thumbnail">
-              <img src=''>
-	      <h3>
-		<strong>Si Young Lee</strong> 
-		<small>Graduate students</small>
-	      </h3>
-          <p>
-            Co-advised with Prof. Kilwon Cho (Chemical Engineering, principal advisor)<br>
-            Research interest: flexible MEMS, wearable sensor<br>
-            B.S., Chemical Engineering, POSTECH (2014)
-          </p>
-	      <ul class="social-icons social-icons-color">
-		<li><a class="facebook" data-original-title="Facebook" href="javascript:;"></a></li>
-		<li><a class="twitter" data-original-title="Twitter" href="javascript:;"></a></li>
-		<li><a class="googleplus" data-original-title="Goole Plus" href="javascript:;"></a></li>
-		<li><a class="linkedin" data-original-title="Linkedin" href="javascript:;"></a></li>
-		<li><a class="email" data-original-title="Linkedin" href="mailto:challenge@postech.ac.kr"></a></li>
-	      </ul>
-	    </div>
-	  </li>
-	  <li class="col-md-3">
-	    <div class="thumbnail">
-              <img src=''>
-	      <h3>
-		<strong>Seong Won Kim</strong> 
-		<small>Graduate students</small>
-	      </h3>
-          <p>
-            Co-advised with Prof. Kilwon Cho (Chemical Engineering, principal advisor)<br>
-            Research interest: stretchable electrode for human–electronics interface<br>
-            B.S., Chemical Engineering, POSTECH (2014)
-          </p>
-	      <ul class="social-icons social-icons-color">
-		<li><a class="facebook" data-original-title="Facebook" href="javascript:;"></a></li>
-		<li><a class="twitter" data-original-title="Twitter" href="javascript:;"></a></li>
-		<li><a class="googleplus" data-original-title="Goole Plus" href="javascript:;"></a></li>
-		<li><a class="linkedin" data-original-title="Linkedin" href="javascript:;"></a></li>
-		<li><a class="email" data-original-title="Linkedin" href="mailto:ksw1118@postech.ac.kr"></a></li>
-
-	      </ul>
-	    </div>
-	  </li>
-	</ul>            
-      </div>
-
-      <div class="row front-team">
-        <h3>UNDERGRADUATE INTERNS(Current)</h3>
-	<ul class="list-unstyled">
-      <%  
-    Object.keys(cur_interns).forEach(function(key) {
-        var value = cur_interns[key]; %>
-      <li class="col-md-3">
-	    <div class="thumbnail">
-	      <h3>
-            <strong><%= key %></strong> 
-            <small><%= value %></small>
-	      </h3>
-	    </div>
-      </li>
-    <% }); %>
-	</ul>            
-      </div>
-
-      <div class="row front-team">
-        <h3>UNDERGRADUATE INTERNS(Previous)</h3>
-	<ul class="list-unstyled">
-      <%  
-    Object.keys(prev_interns).forEach(function(key) {
-        var value = prev_interns[key]; %>
-      <li class="col-md-3">
-	    <div class="thumbnail">
-	      <h3>
-            <strong><%= key %></strong> 
-            <small><%= value %></small>
-	      </h3>
-	    </div>
-      </li>
-    <% }); %>
-	</ul>            
-      </div>
-
-    </div>
-  </div>
-  <!-- END CONTENT -->
-</div>
-<!-- END SIDEBAR & CONTENT -->
