--- a/source/index.ejs
+++ b/source/index.ejs
@@ -1,264 +1,5 @@
 ---
+title: Index
+date: 2018-10-30 01:00:51
 layout: index
 ---
-<%
-    const sponsors = [
-      { url: 'http://www.moe.go.kr', img: '/assets/images/sponsors/moe.gif' },
-      { url: 'http://www.msip.go.kr', img: '/assets/images/sponsors/msip.gif' },
-      { url: 'http://www.msip.go.kr', img: '/assets/images/sponsors/mi.jpg' },
-      { url: 'http://www.nrf.re.kr', img: '/assets/images/sponsors/nrf.jpg' },
-      { url: 'http://www.case.re.kr', img: '/assets/images/sponsors/case.jpg' },
-      { url: 'http://www.posco.com', img: '/assets/images/sponsors/posco.jpg' },
-      { url: 'http://www.samsungftf.com', img: '/assets/images/sponsors/samsung.jpg' },
-      { url: 'http://www.lgdisplay.com', img: '/assets/images/sponsors/lgdisplay.jpg' },
-      { url: 'https://www.keysight.com', img: '/assets/images/sponsors/keysight.jpg' },
-      { url: 'https://www.ansys.com', img: '/assets/images/sponsors/ansys.jpg' }
-    ];
-%>
-  <div id="jssor_1" class="margin-bottom-40 flush-with-header" style="position:relative;top:0px;left:0px;width:1268px;height:400px;overflow:hidden;margin-left:auto;margin-right:auto;">
-    <div data-u="slides" style="position:absolute;top:0px;left:0px;width:1268px;height:400px;overflow:hidden;">
-      <div><img data-u="image" src="/assets/images/banners/banner-1.jpg" width=1268px height=400px /></div>
-      <div><img data-u="image" src="/assets/images/banners/banner-3.jpg" /></div>
-    </div>
-    <!-- Bullet Navigator -->
-    <div data-u="navigator" class="jssorb052" style="position:absolute;bottom:12px;right:12px;" data-autocenter="1" data-scale="0.5" data-scale-bottom="0.75">
-      <div data-u="prototype" class="i" style="width:16px;height:16px;">
-        <svg viewbox="0 0 16000 16000" style="position:absolute;top:0;left:0;width:100%;height:100%;">
-          <circle class="b" cx="8000" cy="8000" r="5800"></circle>
-        </svg>
-      </div>
-    </div>
-  </div>
-
-<div class="main">
-  <div class="container">
-    <!-- BEGIN RESEARCH AREA -->
-    <div class="row recent-work margin-bottom-40">
-      <div class="col-md-3">
-	<h2 class="wow fadeIn"><a href="/research/">Research Area</a></h2>
-    <p class="wow fadeIn">description</p>
-      </div>
-      <div class="col-md-3">
-	<div class="">
-	  <div class="recent-work-item">
-	    <em>
-          <a href="/research#category_1">
-            <img src="/assets/images/fabrication_thumbnail.jpg" alt="Fabrication Technology" class="img-responsive">
-          </a>
-	    </em>
-	    <a class="recent-work-description" href="/research#category_1">
-	      <strong>Fabrication Technology</strong>
-	    </a>
-      </div>
-    </div>
-      </div>
-      <div class="col-md-3">
-	<div class="">
-	  <div class="recent-work-item">
-	    <em>
-          <a href="/research#category_2">
-            <img src="assets/images/emerging_thumbnail.jpg" alt="Emerging Flexible Device" class="img-responsive">
-          </a>
-	    </em>
-	    <a class="recent-work-description" href="/research#category_2">
-	      <strong>Emerging Flexible Device</strong>
-	    </a>
-	  </div>
-    </div>
-      </div>
-      <div class="col-md-3">
-	<div class="">
-	  <div class="recent-work-item">
-	    <em>
-          <a href="/research#category_3">
-            <img src="assets/images/healthcare_thumbnail.jpg" alt="Wearable Healthcare" class="img-responsive">
-          </a>
-	    </em>
-	    <a class="recent-work-description" href="/research#category_3">
-	      <strong>Wearable Healthcare</strong>
-	    </a>
-	  </div>
-	</div>       
-      </div>
-    </div>   
-    <!-- END RESEARCH AREA -->
-
-<div class="container-fluid">
-<div class="row margin-bottom-40 bg-light-2" style="min-height: 200px;">
-  <div class="container">
-    <div class="col-md-5 row-corporate-text-container" style="height: 200px;">
-    <div class="row-corporate-text">
-      <h1><b class="wow fadeIn require">Word Cloud</b></h1>
-      <h4 class="wow fadeIn">Representative keywords from our publications
-        (by Word Cloud Generator)</h4>
-    </div>
-    </div>
-    <div class="col-md-7 wow fadeIn">
-      <img src="/assets/images/wordcloud.jpg" style="width: 80%; min-width: 330px; height: 300px;">
-    </div>
-  </div>
-</div>
-</div>
-    <!-- BEGIN TABS AND TESTIMONIALS -->
-    <div class="row mix-block margin-bottom-40">
-      <!-- TESTIMONIALS -->
-      <div class="col-md-3">
-	<h2>News</h2>
-      </div>
-      <div class="col-md-9 testimonials-v1">
-	<div id="myCarousel" class="carousel slide">
-	  <!-- Carousel items -->
-	  <div class="carousel-inner">
-	    <div class="active item">
-	      <blockquote><p>Inyeol wins an excellence award at the 5th Bio Startup Idea Competition (http://biostartup.jobkorea.co.kr). Congratulations!
-              (May. 2018)
-          </p></blockquote>
-	      <div class="carousel-info">
-		<img class="pull-left" src="metronic/assets/pages/img/people/img1-small.jpg" alt="">
-		<div class="pull-left">
-		  <span class="testimonials-name">Chanhyun Lee</span>
-		  <span class="testimonials-post">Group Admin</span>
-		</div>
-	      </div>
-	    </div>
-	    <div class="item">
-	      <blockquote><p>Taewon joins our group. Welcome!
-              (Feb. 2018)
-          </p></blockquote>
-	      <div class="carousel-info">
-		<img class="pull-left" src="metronic/assets/pages/img/people/img5-small.jpg" alt="">
-		<div class="pull-left">
-		  <span class="testimonials-name">Chanhyun Lee</span>
-		  <span class="testimonials-post">Group Admin</span>
-		</div>
-	      </div>
-	    </div>
-	    <div class="item">
-	      <blockquote><p>Seongmin and Hyuk gives excellent presentations about their research on flexible devices at the 2017 MRS Fall Meeting in Boston.
-              (Nov. 2017)
-          </p></blockquote>
-	      <div class="carousel-info">
-		<img class="pull-left" src="metronic/assets/pages/img/people/img2-small.jpg" alt="">
-		<div class="pull-left">
-		  <span class="testimonials-name">Chanhyun Lee</span>
-		  <span class="testimonials-post">Group Admin</span>
-		</div>
-	      </div>
-	    </div>
-	    <div class="item">
-          <blockquote><p>Inyeol and Jinpyo exhibits their work on the wearable sensor platform to prevent Sudden Infant Death Syndrome at the Tech Fair organized by the Center for Advanced Soft Electronics. Well done!
-(Nov. 2017)
-          </p></blockquote>
-	      <div class="carousel-info">
-		<img class="pull-left" src="metronic/assets/pages/img/people/img2-small.jpg" alt="">
-		<div class="pull-left">
-		  <span class="testimonials-name">Chanhyun Lee</span>
-		  <span class="testimonials-post">Group Admin</span>
-		</div>
-	      </div>
-	    </div>
-	    <div class="item">
-          <blockquote><p>Prof. Chung gives a special lecture on e-paper technologies at the LG Display Technical Talk.
-(Jun. 2017)
-          </p></blockquote>
-	      <div class="carousel-info">
-		<img class="pull-left" src="metronic/assets/pages/img/people/img2-small.jpg" alt="">
-		<div class="pull-left">
-		  <span class="testimonials-name">Chanhyun Lee</span>
-		  <span class="testimonials-post">Group Admin</span>
-		</div>
-	      </div>
-	    </div>
-	    <div class="item">
-          <blockquote><p>Jinpyeo, an undergraduate intern, gets early admission to POSTECH. He will join our graduate program in Spring 2018. Congratulations!
-(Jan. 2017)
-          </p></blockquote>
-	      <div class="carousel-info">
-		<img class="pull-left" src="metronic/assets/pages/img/people/img2-small.jpg" alt="">
-		<div class="pull-left">
-		  <span class="testimonials-name">Chanhyun Lee</span>
-		  <span class="testimonials-post">Group Admin</span>
-		</div>
-	      </div>
-	    </div>
-	    <div class="item">
-          <blockquote><p>A team of Prof. Yoonyoung Chung (Co-PI), Prof. Ho-Jin Song (PI), and Prof. Wonbin Hong (Co-PI) at POSTECH EE is chosen as the recipient of the prestigious ICT research award from Samsung Future Technology Foundation. The groundbreaking research aims to develop massive MIMO beamforming technologies with flexible electronics.
-(Sep. 2016)
-          </p></blockquote>
-	      <div class="carousel-info">
-		<img class="pull-left" src="metronic/assets/pages/img/people/img2-small.jpg" alt="">
-		<div class="pull-left">
-		  <span class="testimonials-name">Chanhyun Lee</span>
-		  <span class="testimonials-post">Group Admin</span>
-		</div>
-	      </div>
-	    </div>
-	    <div class="item">
-          <blockquote><p>Seongmin joins our group. Welcome!
-(Sep. 2016)
-          </p></blockquote>
-	      <div class="carousel-info">
-		<img class="pull-left" src="metronic/assets/pages/img/people/img2-small.jpg" alt="">
-		<div class="pull-left">
-		  <span class="testimonials-name">Chanhyun Lee</span>
-		  <span class="testimonials-post">Group Admin</span>
-		</div>
-	      </div>
-	    </div>
-	    <div class="item">
-          <blockquote><p>Two graduate students Inyeol and Hyuk joins our group. Let's celebrate a new beginning!
-(Mar. 2016)
-          </p></blockquote>
-	      <div class="carousel-info">
-		<img class="pull-left" src="metronic/assets/pages/img/people/img2-small.jpg" alt="">
-		<div class="pull-left">
-		  <span class="testimonials-name">Chanhyun Lee</span>
-		  <span class="testimonials-post">Group Admin</span>
-		</div>
-	      </div>
-	    </div>
-	    <div class="item">
-          <blockquote><p>Professor Yoonyoung Chung joins the EE department at POSTECH as an assistant professor.
-(Feb. 2015)
-          </p></blockquote>
-	      <div class="carousel-info">
-		<img class="pull-left" src="metronic/assets/pages/img/people/img2-small.jpg" alt="">
-		<div class="pull-left">
-		  <span class="testimonials-name">Chanhyun Lee</span>
-		  <span class="testimonials-post">Group Admin</span>
-		</div>
-	      </div>
-	    </div>
-	  </div>
-
-	  <!-- Carousel nav -->
-	  <a class="left-btn" href="#myCarousel" data-slide="prev"></a>
-	  <a class="right-btn" href="#myCarousel" data-slide="next"></a>
-	</div>
-      </div>
-      <!-- END TESTIMONIALS -->
-    </div>                
-    <!-- END TABS AND TESTIMONIALS -->
-    <!-- BEGIN SPONSORS -->
-    <div class="row margin-bottom-40 our-clients">
-      <div class="col-md-3 maring-bottom-20">
-	<h2><a href="javascript:;">Our Sponsors</a></h2>
-	<p>We appreciate the support from a variety of government agencies, consortiums, and companies.</p>
-      </div>
-      <% const count = 5; for(var i=0; i < sponsors.length/count; i++) { %>
-        <div class="col-md-9">
-      <div class="owl-carousel owl-carousel5">
-          <% for(var j=0; j < count; j++) { %>
-      <div class="">
-        <a target="_blank" href=<%= sponsors[(i*count + j)]['url'] %>>
-          <img src=<%= sponsors[(i*count + j)]['img'] %> class="img-responsive" alt="" style="height:90px; object-fit: contain;">
-        </a>
-      </div>
-    <% } %>
-    </div>
-      </div>
-    <% } %>
-    </div>
-    <!-- END SPONSORS -->
-  </div>
-</div>
